--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -6,20 +6,28 @@
     <Viewbox >
         <Grid>
             <Border BorderThickness="2" BorderBrush="#FFD49919">
-                <Canvas Margin="-2,-8,2,8" RenderTransformOrigin="0.965,0.968" Height="777" Width="1400" Background="#FFE3E9EA" >
+                <Canvas Margin="-1,0,1,0" RenderTransformOrigin="0.965,0.968" Height="777" Width="1400" >
+                    <Canvas.Background>
+                        <ImageBrush ImageSource="/KrausRGA;component/Images/white.jpg"/>
+                    </Canvas.Background>
 
-                    <Canvas x:Name="cnTitle" Height="100" Width="1400">
+                    <Canvas x:Name="cnTitle" Height="100" Width="1400" Canvas.Left="2">
                         <Canvas.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                <GradientStop Color="#FF46C0E4" Offset="0.012"/>
+                                <GradientStop Color="#FF308AA4" Offset="0.54"/>
                                 <GradientStop Color="#FF686868" Offset="0.988"/>
+                                <GradientStop Color="#FF686868"/>
                             </LinearGradientBrush>
                         </Canvas.Background>
-                        <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausRGA;component/Images/logo.png"/>
-                        <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="RGA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
+                        <Image x:Name="imgLogo" Height="63" Canvas.Left="5" Canvas.Top="20" Width="175" Stretch="None" Cursor="None" Source="/KrausRGA;component/Images/logo.png"/>
+                        <TextBlock x:Name="tbProjectTitle" Canvas.Left="334" TextWrapping="Wrap" Text="RGA Manager" Canvas.Top="17" Height="73" Width="424" FontSize="50" Foreground="White" FontWeight="Bold">
+                            <TextBlock.Effect>
+                                <DropShadowEffect Color="#FF363636" BlurRadius="15"/>
+                            </TextBlock.Effect>
+                        </TextBlock>
                     </Canvas>
 
-                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Left="1" Canvas.Top="100" CornerRadius="20" Background="#B22C2C2C" Height="677">
+                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Left="1" Canvas.Top="100" Background="#B20B4F70" Height="677">
                         <Canvas Name="cnNewReturn" Width="340" Canvas.Top="128" >
                             <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Top="59" Width="305" Background="#FF424140" Canvas.Left="15" BorderBrush="Black">
                                 <Button x:Name="btnNewScan" Style="{StaticResource win8btn}" Content="New Return" Margin="-1,-1,-1,1"/>
@@ -36,23 +44,25 @@
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="Black" BorderThickness="1" Height="265" Canvas.Left="390" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
+                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="390" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC575757">
                         <Canvas>
                             <TextBlock Name="tbLoginText" Text="Please scan your badge" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
                             <TextBlock Name="tbTitleLogin" Style="{StaticResource tbFormTitle}"  Text="Login" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
                             <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
                                 <TextBox Name="txtLogin" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtLogin_KeyDown"/>
                             </Border>
+
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrScan" Visibility="Hidden" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="Black" BorderThickness="1" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
+                    <Border Name="bdrScan" Visibility="Hidden" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
                         <Canvas>
                             <TextBlock Name="tbScanText" Text="Please Scan Barcode" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
                             <TextBlock Name="tbTitleScan" Style="{StaticResource tbFormTitle}"  Text="Scan" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
                             <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
                                 <TextBox Name="txtScan" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
                             </Border>
+                            <ProgressBar Name="pbrScanner" Height="7" Canvas.Top="254" Width="728" Foreground="#FF55DE2D" Background="{x:Null}" BorderBrush="Black" Canvas.Left="8"/>
                         </Canvas>
                     </Border>
 
@@ -66,9 +76,9 @@
                         </Canvas>
                     </Border>
 
-                    <Border BorderThickness="1" Height="160" Canvas.Top="617" Width="1054" Canvas.Left="346">
+                    <Border BorderThickness="1" Height="160" Canvas.Top="619" Width="1063" Canvas.Left="339">
                         <Canvas>
-                            <Border Name="bdrMsg" BorderThickness="1" Height="27" Canvas.Left="0" Canvas.Top="131" Width="1052" Background="#E1007ACC">
+                            <Border Name="bdrMsg" BorderThickness="1" Height="27" Canvas.Left="0" Canvas.Top="131" Width="1061" Background="#E1007ACC">
                                 <Border.Style >
                                     <Style TargetType="{x:Type Border}">
                                         <Style.Triggers>
@@ -94,7 +104,7 @@
                                         </Style.Triggers>
                                     </Style>
                                 </Border.Style>
-                                <TextBlock Name="txtError" Style="{StaticResource ScrollTextBlockKeyStyle}" TextWrapping="Wrap" Text="sdfasdf" Margin="9,0,16,2"/>
+                                <TextBlock Name="txtError" Style="{StaticResource ScrollTextBlockKeyStyle}" TextWrapping="Wrap" Text="sdfasdf" Margin="9,1,16,1"/>
                             </Border>
                         </Canvas>
                     </Border>
