--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -142,12 +142,12 @@
                                                     <DataGridTemplateColumn.CellTemplate>
                                                         <DataTemplate >
                                                             <Canvas Name="cvButtons" Background="White">
-                                                                <Button Name="btnRed" Width="45" Height="65" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                                                                <Button Name="btnRed" Width="45" Height="65" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource ImageButton}">
                                                                     <Button.Background>
                                                                         <ImageBrush ImageSource="/KrausRGA;component/Images/Unchecked .png"/>
                                                                     </Button.Background>
                                                                 </Button >
-                                                                <Button Name="btnGreen" Visibility="Hidden" Width="45" Height="65"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                                                                <Button Name="btnGreen" Visibility="Hidden" Width="45" Height="65"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource ImageButton}"
                                                                           Click="btnGreen_Click" >
                                                                     <Button.Background>
                                                                         <ImageBrush ImageSource="/KrausRGA;component/Images/Checked .png"/>
@@ -314,7 +314,7 @@
                                                             </Style>
                                                         </Border.Style>
                                                         <Canvas >
-                                                            <ComboBox Height="22" HorizontalAlignment="Left" Margin="104,269,0,0"
+                                                            <ComboBox Height="22" HorizontalAlignment="Left" Margin="104,269,0,0" 
                           x:Name="VidDvcsComboBox" VerticalAlignment="Top" Width="210" Visibility="Hidden" />
                                                             <ComboBox Visibility="Hidden" Height="23" HorizontalAlignment="Left" Margin="105,302,0,0"
                           x:Name="AudDvcsComboBox" VerticalAlignment="Top" Width="209" />
