--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -142,12 +142,12 @@
                                                     <DataGridTemplateColumn.CellTemplate>
                                                         <DataTemplate >
                                                             <Canvas x:Name="cvButtons" Background="White">
-                                                                <Button x:Name="btnRed" Width="45" Height="65" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                                                                <Button x:Name="btnRed" Width="45" Height="65" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource ImageButton}">
                                                                     <Button.Background>
                                                                         <ImageBrush ImageSource="/KrausRGA;component/Images/Unchecked .png"/>
                                                                     </Button.Background>
                                                                 </Button>
-                                                                <Button x:Name="btnGreen" Visibility="Hidden" Width="45" Height="65"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                                                                <Button x:Name="btnGreen" Visibility="Hidden" Width="45" Height="65"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource ImageButton}"
                                     								Click="btnGreen_Click" >
                                                                     <Button.Background>
                                                                         <ImageBrush ImageSource="/KrausRGA;component/Images/Checked .png"/>
