--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -55,26 +55,18 @@
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrScan" Visibility="Hidden" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
+                    <Border Name="bdrScan" Visibility="Hidden"  Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
                         <Canvas>
-                            <TextBlock Name="tbScanText" Text="Please Scan Barcode" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
-                            <TextBlock Name="tbTitleScan" Style="{StaticResource tbFormTitle}"  Text="Scan" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
-                            <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
-                                <TextBox Name="txtScan" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
+                            <ProgressBar x:Name="pbrScanner" Height="55" Canvas.Top="98" Width="395" Foreground="#FF0DBB05" Background="White" BorderBrush="{x:Null}" Canvas.Left="188" />
+                            <TextBlock x:Name="tbScanText" Text="Please Scan Barcode" FontSize="20" Canvas.Left="188" Canvas.Top="71" />
+                            <TextBlock x:Name="tbTitleScan" Style="{StaticResource tbFormTitle}"  Text="Scan" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
+                            <Border BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10">
+                                <TextBox x:Name="txtScan" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
                             </Border>
-                            <ProgressBar Name="pbrScanner" Height="7" Canvas.Top="254" Width="728" Foreground="#FF55DE2D" Background="{x:Null}" BorderBrush="Black" Canvas.Left="8"/>
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrSrNumber" Visibility="Hidden" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="Black" BorderThickness="1" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC636363">
-                        <Canvas>
-                            <TextBlock Name="tbsrScanText" Text="Please Enter SR Number" FontSize="20" Canvas.Left="188" Canvas.Top="71" KeyDown="txtScan_KeyDown" />
-                            <TextBlock Name="tbsrTitleScan" Style="{StaticResource tbFormTitle}"  Text="SR Number" Height="52" Width="264" Canvas.Left="8" Canvas.Top="8"/>
-                            <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10" Background="White">
-                                <TextBox Name="txtsrScan" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown" />
-                            </Border>
-                        </Canvas>
-                    </Border>
+                   
 
                     <Border BorderThickness="1" Height="160" Canvas.Top="619" Width="1063" Canvas.Left="339">
                         <Canvas>
