--- a/KrausxRGA/UI/wndWait.xaml
+++ b/KrausxRGA/UI/wndWait.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="KrausRGA.UI.wndWait"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="wndWait"  Height="780" Width="1280" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None"
+        Title="wndWait"  Height="800" Width="1393" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None"
         Background="{x:Null}" Foreground="{x:Null}" AllowsTransparency="True" Name="WaitWindow">
     <Grid HorizontalAlignment="Left" Margin="0,4,0,-4" Background="{x:Null}"  >
 
-        <Border BorderThickness="3" Background="#B22A2C2C" CornerRadius="30" BorderBrush="#FFEEB41C" Margin="0,0,-1275,0">
+        <Border BorderThickness="3" CornerRadius="30" Margin="0,0,-1395,0" Background="#7F000000" BorderBrush="#FF5ABBCB">
             <Canvas Margin="-3,-3,3,3" Background="{x:Null}">
-                <Label FontSize="35" FontWeight="Bold" Foreground="#FF95E0E8" Content="Please wait saving recoreds ..." Canvas.Top="334" Width="1147" Canvas.Left="123" Background="{x:Null}"/>
-                <ProgressBar Height="35" Width="775" RenderTransformOrigin="0.5,0.5" Canvas.Top="391" SmallChange="20" FontSize="60" FontWeight="Bold" LargeChange="50" Value="100" IsIndeterminate="True" Canvas.Left="115">
+                <Label FontSize="35" FontWeight="Bold" Foreground="#FF91BDBD" Content="Please wait saving recoreds ..." Canvas.Top="505" Width="512" Canvas.Left="55" Background="{x:Null}"/>
+                <ProgressBar Height="35" Width="1300" RenderTransformOrigin="0.5,0.5" Canvas.Top="590" SmallChange="20" FontSize="60" FontWeight="Bold" LargeChange="50" Value="100" IsIndeterminate="True" Canvas.Left="55">
                     <ProgressBar.Effect>
                         <DropShadowEffect Color="#FF383940" BlurRadius="20" ShadowDepth="18"/>
                     </ProgressBar.Effect>
