--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -2,23 +2,23 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
-       Title="Kraus GRA System" Height="800" Width="1228" WindowState="Maximized"
+       Title="Kraus GRA System" Height="714" Width="1228" WindowState="Maximized"
        Loaded="Window_Loaded" Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="Window_Closing">
     <Viewbox>
-        <Grid Height="700" Width="1104">
+        <Grid Height="619" Width="1104">
             <Border BorderThickness="2" BorderBrush="#FFD49919">
                 <Canvas Margin="1,2,-1,-2" >
                     <Canvas.Background>
                         <ImageBrush ImageSource="/KrausRGA;component/Images/white.jpg"/>
                     </Canvas.Background>
-                    <Canvas Name="cvMainArea" Height="615" Width="1095" Canvas.Left="5">
-                        <TabControl Height="613" Name="tbrgzdetail" Width="1092" BorderBrush="#FF405EB8" Canvas.Top="2" SelectionChanged="tbrgzdetail_SelectionChanged" Background="#7FD6D6D6">
+                    <Canvas Name="cvMainArea" Height="551" Width="1095" Canvas.Left="5">
+                        <TabControl Height="549" Name="tbrgzdetail" Width="1092" BorderBrush="#FF405EB8" Canvas.Top="2" SelectionChanged="tbrgzdetail_SelectionChanged" Background="#7FD6D6D6">
                             <TabItem Header="RMA Details" Height="50" Width="200" FontSize="30" Foreground="#FF1BACFF" BorderBrush="#FF405EB8" BorderThickness="2" Margin="10,0,-10,0">
                                 <Border Name="bdrmain" >
                                     <Canvas Name="cvsTb1main" Margin="0,0,0,0">
-                                        <Border Height="262" Width="1062" CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
+                                        <Border Height="227" Width="1062" CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
                                             <Canvas Margin="0,0,0,0">
-                                                <Border Height="52" Width="1058" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
+                                                <Border Height="52" Width="1061" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
                                                     <TextBlock TextWrapping="Wrap" Text="RMA Details" FontSize="30" Foreground="White" Margin="10,6,877,0"/>
                                                 </Border>
                                                 <Label Name="lblcRMANumber" Content="RMA Number : " Style="{StaticResource lblConstant}" Canvas.Top="59" Width="143" Canvas.Left="476"/>
@@ -31,20 +31,20 @@
                                                 <Label Name="lblVendorNumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="624" Canvas.Top="97" Width="205" Height="33"/>
 
                                                 <Label Name="lblcVendorName" Content="Vendor Name : " Style="{StaticResource lblConstant}" Canvas.Top="175" Width="147" Canvas.Left="478"/>
-                                                <Label Name="lblVendorName" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="624" Canvas.Top="173" Width="361" Height="33"/>
+                                                <Label Name="lblVendorName" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="624" Canvas.Top="173" Width="424" Height="33"/>
 
-                                                <Label Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="70" Width="127" Canvas.Left="6"/>
-                                                <ComboBox Name="cmbRMAStatus" Height="46" Width="258" Canvas.Left="138" Canvas.Top="65" 
+                                                <Label Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="76" Width="127" Canvas.Left="8"/>
+                                                <ComboBox Name="cmbRMAStatus" Height="52" Width="258" Canvas.Left="138" Canvas.Top="65" 
                                                           ItemsSource="{Binding RAMStatus}" DisplayMemberPath="Status" SelectedValuePath="ID" SelectedIndex="0" SelectedValue="-1"/>
 
-                                                <Label Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="141" Width="97" Canvas.Left="36"/>
-                                                <ComboBox Name="cmbRMADecision" Height="46" Width="258" Canvas.Left="138" Canvas.Top="135" 
+                                                <Label Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="155" Width="97" Canvas.Left="36"/>
+                                                <ComboBox Name="cmbRMADecision" Height="54" Width="258" Canvas.Left="138" Canvas.Top="141" 
                                                           ItemsSource="{Binding RAMStatus}" SelectedValuePath="ID" DisplayMemberPath="Status" SelectedIndex="0" SelectedValue="-1" />
 
                                             </Canvas>
                                         </Border>
 
-                                        <Border Height="229" Width="1062" CornerRadius="10" Canvas.Top="296" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
+                                        <Border Height="229" Width="1062" CornerRadius="10" Canvas.Top="242" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" >
                                             <Canvas Margin="0,0,0,-2">
                                                 <Border Height="52" Width="1061" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
                                                     <TextBlock TextWrapping="Wrap" Text="PO / Order Details" FontSize="30" Foreground="White" Margin="10,6,794,0"/>
@@ -97,6 +97,7 @@
                                     		Width="1082" 
                                     		ScrollViewer.CanContentScroll="False" 
                                     		ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                                            ScrollViewer.VerticalScrollBarVisibility="Auto" 
                                     		CanUserAddRows="False"    
                                     		AutoGenerateColumns="False" 
                                     		FontSize="17" 
@@ -107,7 +108,7 @@
                                     		BorderBrush="{x:Null}" 
                                     		HorizontalGridLinesBrush="#FF575757" 
                                     		VerticalGridLinesBrush="Gray"
-                                    		Height="551"  
+                                    		Height="487"  
                                     		SelectedIndex="-1" SelectionChanged="dgPackageInfo_SelectionChanged"
                                                    >
 
@@ -366,10 +367,8 @@
                                             </Canvas>
                                         </Border>
                                         <!-- Zoom image captured. -->
-                                        <Border x:Name="bdrZoomImage" Canvas.Left="473" Canvas.Top="242" BorderThickness="2" Visibility="Hidden" CornerRadius="5" BorderBrush="#FF9B20E2">
-                                            <Image Height="369" Canvas.Left="417" Stretch="Fill"  Canvas.Top="130"
-                                    			Width="524" x:Name="imgZoom" Visibility="Visible" 
-                                    			MouseLeftButtonDown="imgZoom_MouseLeftButtonDown"/>
+                                        <Border x:Name="bdrZoomImage" Canvas.Left="376" Canvas.Top="77" BorderThickness="2" Visibility="Hidden" CornerRadius="5" BorderBrush="#FF9B20E2" Height="317" Width="448">
+                                            <Image Canvas.Left="417" Stretch="Fill"  Canvas.Top="130" x:Name="imgZoom" Visibility="Visible" MouseLeftButtonDown="imgZoom_MouseLeftButtonDown" Margin="4"/>
                                         </Border>
 
                                         <Canvas x:Name="cvItemStatus" Visibility="Hidden" Height="500" Canvas.Left="430" Canvas.Top="45" Width="950" OpacityMask="#FF535252" Background="#FF406B83">
@@ -515,35 +514,35 @@
                                         </Canvas>
                                     </Border>
 
-                                    <Border Width="1062" CornerRadius="10" Canvas.Top="313" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" Height="167" >
+                                    <Border Width="832" CornerRadius="10" Canvas.Top="313" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" Height="167" >
                                         <Canvas Margin="0,0,0,0">
-                                            <Border Height="52" Width="1061" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
-                                                <TextBlock TextWrapping="Wrap" Text="Other Reason" FontSize="30" Foreground="White" Margin="10,4,848,6"/>
+                                            <Border Height="52" Width="828" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
+                                                <TextBlock TextWrapping="Wrap" Text="Other Reason" FontSize="30" Foreground="White" Margin="10,4,624,6"/>
                                             </Border>
 
-                                            <TextBox Name="txtOtherReason" Height="49" Width="1058" Canvas.Top="53" TextWrapping="WrapWithOverflow" Background="{x:Null}" />
-                                            <ComboBox Name="cmbOtherReason" ItemsSource="{Binding}" DisplayMemberPath="Reason1" SelectedValuePath="ReasonID"  Canvas.Left="2" Canvas.Top="102" Width="1056" Height="55" SelectedIndex="0" SelectedValue="0" SelectionChanged="cmbOtherReason_SelectionChanged"/>
+                                            <TextBox Name="txtOtherReason" Height="49" Width="825" Canvas.Top="53" TextWrapping="WrapWithOverflow" Background="{x:Null}" />
+                                            <ComboBox Name="cmbOtherReason" ItemsSource="{Binding}" DisplayMemberPath="Reason1" SelectedValuePath="ReasonID"  Canvas.Left="2" Canvas.Top="102" Width="823" Height="55" SelectedIndex="0" SelectedValue="0" SelectionChanged="cmbOtherReason_SelectionChanged"/>
 
                                         </Canvas>
                                     </Border>
-                                    <Border x:Name="bdrButtonSave" Height="62" Width="249" Canvas.Left="823" Canvas.Top="485">
+                                    <Border x:Name="bdrButtonSave" Height="128" Width="208" Canvas.Left="864" Canvas.Top="419">
                                         <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
                                                     Name="btnHomeDone"
                                     			Content="Done" 
-                                    			Width="249" 
-                                    			Height="62" 
+                                    			Width="208" 
+                                    			Height="128" 
                                     			Background="#FF464343" 
                                     			Foreground="#FFF9F9F9" 
                                     			OpacityMask="Black" VerticalAlignment="Bottom"
-                                                    Click="btnHomeDone_Click" HorizontalAlignment="Right"
+                                                    Click="btnHomeDone_Click" HorizontalAlignment="Right" Margin="-10,-83,10,83"
                                                     />
                                     </Border>
                                 </Canvas>
                             </TabItem>
                         </TabControl>
                     </Canvas>
-                    <Border BorderThickness="1" Height="82" Canvas.Top="613" Width="1092" Canvas.Left="5">
-                        <Canvas>
+                    <Border BorderThickness="1" Height="64" Canvas.Top="551" Width="1092" Canvas.Left="5">
+                        <Canvas Margin="0,-63,0,0">
                             <Border Name="bdrMsg" Visibility="Hidden" BorderThickness="1" Height="27" Canvas.Left="0" Canvas.Top="53" Width="1048" Background="#E1007ACC">
                                 <Border.Style >
                                     <Style TargetType="{x:Type Border}">
