--- a/KrausxRGA/UI/wndWait.xaml
+++ b/KrausxRGA/UI/wndWait.xaml
@@ -1,40 +1,42 @@
 ﻿<Window x:Class="KrausRGA.UI.wndWait"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="wndWait"  Height="800" Width="1393" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None"
+        Title="wndWait"  Height="675" Width="1160" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None"
         Background="{x:Null}" Foreground="{x:Null}" AllowsTransparency="True" Name="WaitWindow">
-    <Grid HorizontalAlignment="Left" Margin="0,4,0,-4" Background="{x:Null}"  >
+    <Viewbox>
+        <Grid HorizontalAlignment="Left"  Height="800" Width="1393" Background="{x:Null}"  >
 
-        <Border BorderThickness="3" CornerRadius="30" Margin="0,0,-1395,0" Background="#7F000000" BorderBrush="#FF5ABBCB">
-            <Canvas Margin="-3,-3,3,3" Background="{x:Null}">
-                <Label FontSize="35" FontWeight="Bold" Foreground="#FF91BDBD" Content="Please wait saving recoreds ..." Canvas.Top="505" Width="512" Canvas.Left="55" Background="{x:Null}"/>
-                <ProgressBar Height="35" Width="1300" RenderTransformOrigin="0.5,0.5" Canvas.Top="590" SmallChange="20" FontSize="60" FontWeight="Bold" LargeChange="50" Value="100" IsIndeterminate="True" Canvas.Left="55">
-                    <ProgressBar.Effect>
-                        <DropShadowEffect Color="#FF383940" BlurRadius="20" ShadowDepth="18"/>
-                    </ProgressBar.Effect>
-                    <ProgressBar.Foreground>
+            <Border BorderThickness="3" CornerRadius="30" Background="#7F000000" BorderBrush="#FF5ABBCB">
+                <Canvas Margin="-3,-3,3,3" Background="{x:Null}">
+                    <Label FontSize="35" FontWeight="Bold" Foreground="White" Content="Please wait saving records ..." Canvas.Top="505" Width="512" Canvas.Left="55" Background="{x:Null}"/>
+                    <ProgressBar Height="35" Width="1300" RenderTransformOrigin="0.5,0.5" Canvas.Top="590" SmallChange="20" FontSize="60" FontWeight="Bold" LargeChange="50" Value="100" IsIndeterminate="True" Canvas.Left="55">
+                        <ProgressBar.Effect>
+                            <DropShadowEffect Color="#FF383940" BlurRadius="20" ShadowDepth="18"/>
+                        </ProgressBar.Effect>
+                        <ProgressBar.Foreground>
 
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="#FFF9D700" Offset="0.5"/>
-                            <GradientStop Color="#FF31CF18" Offset="02"/>
-                        </LinearGradientBrush>
-                    </ProgressBar.Foreground>
-                    <ProgressBar.BorderBrush>
-                        <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                            <GradientStop Color="#FF5D9E90" Offset="0"/>
-                            <GradientStop Color="#FF21769E" Offset="1"/>
-                        </LinearGradientBrush>
-                    </ProgressBar.BorderBrush>
-                    <ProgressBar.Background>
-                        <LinearGradientBrush EndPoint="1,0" StartPoint="0,0">
-                            <GradientStop Color="#FF21769E" Offset="0"/>
-                            <GradientStop Color="#FF21769E" Offset="0.481"/>
-                            <GradientStop Color="#FF21769E" Offset="0.996"/>
-                            <GradientStop Color="#FF21769E" Offset="0.763"/>
-                        </LinearGradientBrush>
-                    </ProgressBar.Background>
-                </ProgressBar>
-            </Canvas>
-        </Border>
-    </Grid>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="#FFF9D700" Offset="0.5"/>
+                                <GradientStop Color="#FF31CF18" Offset="02"/>
+                            </LinearGradientBrush>
+                        </ProgressBar.Foreground>
+                        <ProgressBar.BorderBrush>
+                            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                                <GradientStop Color="#FF5D9E90" Offset="0"/>
+                                <GradientStop Color="#FF21769E" Offset="1"/>
+                            </LinearGradientBrush>
+                        </ProgressBar.BorderBrush>
+                        <ProgressBar.Background>
+                            <LinearGradientBrush EndPoint="1,0" StartPoint="0,0">
+                                <GradientStop Color="#FF21769E" Offset="0"/>
+                                <GradientStop Color="#FF21769E" Offset="0.481"/>
+                                <GradientStop Color="#FF21769E" Offset="0.996"/>
+                                <GradientStop Color="#FF21769E" Offset="0.763"/>
+                            </LinearGradientBrush>
+                        </ProgressBar.Background>
+                    </ProgressBar>
+                </Canvas>
+            </Border>
+        </Grid>
+    </Viewbox>
 </Window>
