--- a/KrausxRGA/App.xaml
+++ b/KrausxRGA/App.xaml
@@ -81,7 +81,7 @@
         <Style x:Key="tbFormTitle" TargetType="TextBlock">
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="Foreground" Value="WhiteSmoke"/>
-            <Setter Property="FontSize" Value="45"/>
+            <Setter Property="FontSize" Value="{DynamicResource FontSz}"/>
         </Style>
 
         <!--  _________________________ -->
