--- a/KrausxRGA/UI/wndAppSetting.xaml
+++ b/KrausxRGA/UI/wndAppSetting.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="wndAppSetting" Height="331" Width="654" Loaded="Window_Loaded">
     <Grid>
-        <Slider x:Name="sldfont" HorizontalAlignment="Left" Margin="130,31,0,0" VerticalAlignment="Top" Width="235" Minimum="1" Maximum="50" ValueChanged="sldfont_ValueChanged"/>
+        <Slider x:Name="sldfont" HorizontalAlignment="Left" Margin="130,31,0,0" VerticalAlignment="Top" Width="235" Minimum="1" Maximum="100" ValueChanged="sldfont_ValueChanged" Value="50"/>
         <Label Content="A" HorizontalAlignment="Left" Margin="88,28,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Label Content="A" HorizontalAlignment="Left" Margin="380,12,0,0" VerticalAlignment="Top" FontSize="36" />
         <Label Content="A" HorizontalAlignment="Left" Margin="95,59,0,0" VerticalAlignment="Top" FontSize="45" />
