--- a/KrausxRGA/UI/wndAppSetting.xaml
+++ b/KrausxRGA/UI/wndAppSetting.xaml
@@ -1,19 +1,20 @@
 ﻿<Window x:Class="KrausRGA.UI.wndAppSetting"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Application Setting" Height="449" Width="719" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
-    <Grid Margin="0,3,-8,-10">
+        Title="Application Setting" Height="1200" Width="800" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+    <Viewbox>
+    <Grid Margin="0,3,2,5" Height="321">
         <Grid.Background>
             <ImageBrush ImageSource="/KrausRGA;component/Images/white.jpg"/>
         </Grid.Background>
 
-        <Border CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" Margin="14,18,35,81" >
-            <Canvas Margin="0,0,0,0" Background="#33000000">
+        <Border CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" Margin="4,0,10,0" >
+            <Canvas Margin="0,0,-2,0" Background="#33000000">
                 <Border Height="52" Background="#B2111111" Width="666" CornerRadius="5">
                     <TextBlock TextWrapping="Wrap" Text="Application Font Size Setting" FontSize="30" Foreground="White" Margin="10,6,242,0"/>
                 </Border>
-                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="342" Height="52" Width="174" >
-                    <StackPanel Orientation="Horizontal">
+                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="324" Height="52" Width="174" Canvas.Left="-3" >
+                    <StackPanel Orientation="Horizontal" Margin="0,-1,0,1">
                         <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnlogout_Click" Width="52"></Image>
                         <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="OK" Margin="-1,-2,-1,-1" Click="btnlogout_Click" Width="103"/>
                     </StackPanel>
@@ -26,11 +27,11 @@
         <Label Content="Control Font" HorizontalAlignment="Left" Margin="99,231,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20"/>
         <Label Content="A" Name="lblcontrolfont" HorizontalAlignment="Left" Margin="285,225,0,0" VerticalAlignment="Top" FontSize="22" />
         <Label Content="A" HorizontalAlignment="Left" Margin="445,231,0,0" VerticalAlignment="Top" Style="{StaticResource lblVeriable}" />
-        <Label Content="Label Font" HorizontalAlignment="Left" Margin="113,292,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
+        <Label Content="Label Font" HorizontalAlignment="Left" Margin="113,288,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
         <Label Content="A" x:Name="lblcontrolfont_Copy" HorizontalAlignment="Left" Margin="288,287,0,0" VerticalAlignment="Top" FontSize="20" />
         <Label Content="A" HorizontalAlignment="Left" Margin="447,292,0,0" VerticalAlignment="Top" Style="{StaticResource lblConstant}" />
 
-        <Border BorderThickness="1" HorizontalAlignment="Left" Height="68" Margin="14,71,0,0" VerticalAlignment="Top" Width="675">
+        <Border BorderThickness="1" HorizontalAlignment="Left" Height="68" Margin="14,71,0,0" VerticalAlignment="Top" Width="661">
             <Canvas Margin="-1,0,9,0">
                 <Border/>
                 <Border/>
@@ -43,4 +44,5 @@
 
         </Border>
     </Grid>
+    </Viewbox>
 </Window>
