--- a/KrausxRGA/UI/wndAppSetting.xaml
+++ b/KrausxRGA/UI/wndAppSetting.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KrausRGA.UI.wndAppSetting"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Application Setting" Height="1200" Width="800" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+        Title="Application Setting" Height="1200" Width="800" WindowState="Maximized" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
     <Viewbox>
     <Grid Margin="0,3,2,5" Height="321">
         <Grid.Background>
