--- a/KrausxRGA/UI/wndWait.xaml
+++ b/KrausxRGA/UI/wndWait.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="wndWait"  Height="675" Width="1160" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None"
-        Background="{x:Null}" Foreground="{x:Null}" AllowsTransparency="True" Name="WaitWindow">
+        Background="{x:Null}" Foreground="{x:Null}" WindowState="Maximized" AllowsTransparency="True" Name="WaitWindow">
     <Viewbox>
         <Grid HorizontalAlignment="Left"  Height="800" Width="1393" Background="{x:Null}"  >
 
