status read only

--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -35,7 +35,7 @@
                                             <Label x:Name="lblVendorName" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="550" Canvas.Top="173" Width="216" Height="33"/>
 
                                             <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="78" Width="127" Canvas.Left="-3"/>
-                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="202" Canvas.Left="136" Canvas.Top="70" Style="{StaticResource combo}" 
+                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="202" Canvas.Left="136" Canvas.Top="70" Style="{StaticResource combo}" IsReadOnly="True"
 													ItemsSource="{Binding RAMStatus}" DisplayMemberPath="Status" SelectedValuePath="ID" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929">
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -49,7 +49,7 @@
                                             </ComboBox>
 
                                             <Label x:Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="152" Width="97" Canvas.Left="27"/>
-                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="202" Canvas.Left="136" Canvas.Top="152" Style="{StaticResource combo}"
+                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="202" Canvas.Left="136" Canvas.Top="152" Style="{StaticResource combo}" IsReadOnly="True"
 													ItemsSource="{Binding RAMStatus}" SelectedValuePath="ID" DisplayMemberPath="Status" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929" >
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
